--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,5 +14,8 @@
     "pg": "^7.11.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.8.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
